Affichage de message d'erreur et de confirmation

--- a/lan/index.html
+++ b/lan/index.html
@@ -58,7 +58,7 @@
                   <h2>Le site web du LAN de l'ADEPT<br>se refait une beauté!</h2>
                   <hr>
                   <h4>Nous travaillons dur pour concevoir un tout nouveau site pour le LAN. Revenez-bientôt !</h4>
-                  <a href="../index.html" class="btn btn-get-started btn-primary" id="lanbtn">Retour au site web de l'ADEPT</a>
+                  <a href="../index.php" class="btn btn-get-started btn-primary" id="lanbtn">Retour au site web de l'ADEPT</a>
                 </div>
               </div>
             </div>
