--- a/lan/index.html
+++ b/lan/index.html
@@ -62,15 +62,14 @@
                     <div class="text-center col-md-8">
                       <img src="../img/logo-lan.png" width="250" style="margin-bottom:20px">
 
-                      <h2>Le site web du LAN de l'ADEPT se refait une beauté!</h2>
-                      <h4>Nous travaillons dur pour concevoir un tout nouveau site pour le LAN. Revenez-bientôt !</h4>
+                      <h3>Nous travaillons dur pour concevoir un tout nouveau site pour le LAN. Revenez-bientôt !</h3>
                       <hr>
                       <h5>En attendant, inscrivez-vous afin de recevoir toutes les informations importantes pour le prochain LAN!</h5>
                       <form action="../controller/subscribe.php" method="post">
                         <div class="row">
                           <div class="col-md-2"> </div>
                           <div class="input-group col-md-8">
-                            <input type="email" class="form-control" placeholder="courriel@internet.com" aria-label="Recipient's username" required>
+                            <input type="email" class="form-control" placeholder="courriel@internet.com" name="email" required>
                             <div class="input-group-append">
                               <input class="btn btn-primary" type="submit" value="S'inscrire">
                             </div>
