Ajout sponsors sur le loading page

--- a/lan/index.html
+++ b/lan/index.html
@@ -54,7 +54,7 @@
             <div id="introCarousel" class="carousel  slide carousel-fade" data-ride="carousel">
                 <ol class="carousel-indicators"></ol>
                 <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item active" style="background-image: url('./bg-lan.JPG');">
+                    <div class="carousel-item active" style="background-image: url('img/bg-lan.JPG');">
                         <div class="carousel-container">
                             <div class="carousel-content">
                                 <div class="row">
@@ -63,7 +63,10 @@
                                         <img src="https://adeptinfo.ca/img/logo-lan.png" width="250" style="margin-bottom:20px">
                                         <img src="https://adeptinfo.ca/img/badge.png" width="250" style="margin-bottom:20px">
 
-                                        <h3>Nous sommes heureux de vous accueillir au LAN de l'ADEPT édition Automne 2018!</h3>
+                                        <h3>Nous sommes heureux de vous accueillir au LAN de l'ADEPT édition Hiver 2019!</h3>
+
+                                        <img width="400px" src="img/dreakhack.png">
+                                        
                                         <div class="progress">
                                             <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                                         </div>
@@ -85,7 +88,6 @@
           break;
         }
       }
-      window.location.href = "https://lanadept.azurewebsites.net"
     </script>
 </body>
 </html>
