Oups j'ai delete de JS a la palce de le comment.

--- a/lan/index.html
+++ b/lan/index.html
@@ -84,6 +84,15 @@
             </div>
         </div>
     </section>
+    <script type="text/javascript">
+        var start = new Date().getTime();
+        for (var i = 0; i < 1e7; i++) {
+            if ((new Date().getTime() - start) > 1000) {
+                break;
+            }
+        }
+        window.location.href = "https://lanadept.azurewebsites.net"
+    </script>
 </body>
 
 </html>
