Recreate repo after it was destroyed by HandsomeRomanian

--- a/lan/index.html
+++ b/lan/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+    
+        <script type="text/javascript">
+            window.location.href = "https://lanadept.azurewebsites.net";
+       </script>
     <meta charset="utf-8">
     <title>LAN de l'ADEPT</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -82,17 +86,6 @@
             </div>
         </div>
     </section>
-    <!--<script type="text/javascript">
-        var start = new Date().getTime();
-        for (var i = 0; i < 1e7; i++) {
-            if ((new Date().getTime() - start) > 1000) {
-                break;
-            }
-        }
-        window.location.href = "https://lanadept.azurewebsites.net"
-
-      }
-    </script>-->
 </body>
 
 </html>
