--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
               <img src="img/users/4.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Jean-Nicolas Pauzé</h4>
+                  <h4> Matei Martin </h4>
                   <span>Président</span>
                 </div>
               </div>
@@ -358,7 +358,7 @@
               <img src="img/users/21.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>William Bastille</h4>
+                  <h4> Matthew Duteau </h4>
                   <span>Vice Président</span>
                 </div>
               </div>
@@ -369,7 +369,7 @@
               <img src="img/users/19.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Tam</h4>
+                  <h4> Jean-Nicolas Pauzé </h4>
                   <span>Secrétaire externe</span>
                 </div>
               </div>
@@ -380,7 +380,7 @@
               <img src="img/users/20.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Félix Pellerin</h4>
+                  <h4> Alexis Autotte </h4>
                   <span>Secrétaire interne</span>
                 </div>
               </div>
@@ -391,7 +391,7 @@
               <img src="img/users/23.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Guillaume Belzile</h4>
+                  <h4> Ricky Chittaphone </h4>
                   <span>Trésorier</span>
                 </div>
               </div>
