--- a/client/src/index.html
+++ b/client/src/index.html
@@ -81,7 +81,7 @@
   </head>
   <body>
     <!-- Load Facebook SDK for JavaScript -->
-    <div id="fb-root"></div>
+    <!-- <div id="fb-root"></div>
     <script>
       (function (d, s, id) {
         var js,
@@ -93,10 +93,10 @@
           "https://connect.facebook.net/fr_FR/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1";
         fjs.parentNode.insertBefore(js, fjs);
       })(document, "script", "facebook-jssdk");
-    </script>
+    </script> -->
 
     <!-- Your customer chat code -->
-    <div
+    <!-- <div
       class="fb-customerchat"
       minimized="true"
       attribution="setup_tool"
@@ -104,7 +104,7 @@
       theme_color="#10d213"
       logged_in_greeting="Salut! Avez-vous des questions?"
       logged_out_greeting="Salut! Avez-vous des questions? Connectez vous avec Facebook et posez les!"
-    ></div>
+    ></div> -->
     <app-root></app-root>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
