--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
           </div>
           <div class="col-md-2 wow fadeInUp" data-wow-delay="0.2s">
             <div class="member">
-              <img src="img/users/empty.jpg" class="img-fluid" alt="">
+              <img src="img/users/33.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4> Félix Bourdages </h4>
