Ajustement tailles images CA

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
         <div class="row">
           <div class="col-md-2 offset-md-1 wow fadeInUp">
             <div class="member">
-              <img src="img/users/30.jpg" class="img-fluid" alt="">
+              <img src="img/users/30.jpg" class="img-fluid imgMembreCA" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4> Dominique Domenco</h4>
@@ -355,7 +355,7 @@
           </div>
           <div class="col-md-2 wow fadeInUp" data-wow-delay="0.1s">
             <div class="member">
-              <img src="img/users/34.jpg" class="img-fluid" alt="">
+              <img src="img/users/34.jpg" class="img-fluid imgMembreCA" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4> Matys Trudeau </h4>
@@ -366,7 +366,7 @@
           </div>
           <div class="col-md-2 wow fadeInUp" data-wow-delay="0.2s">
             <div class="member">
-              <img src="img/users/37.jpg" class="img-fluid" alt="">
+              <img src="img/users/37.jpg" class="img-fluid imgMembreCA" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4> Alexandre Vigneault </h4>
@@ -377,7 +377,7 @@
           </div>
           <div class="col-md-2 wow fadeInUp" data-wow-delay="0.3s">
             <div class="member">
-              <img src="img/users/36.jpg" class="img-fluid" alt="">
+              <img src="img/users/36.jpg" class="img-fluid imgMembreCA" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4> Louis-Philippe Héon </h4>
@@ -388,7 +388,7 @@
           </div>
           <div class="col-md-2 wow fadeInUp" data-wow-delay="0.3s">
             <div class="member">
-              <img src="img/users/35.jpg" class="img-fluid" alt="">
+              <img src="img/users/35.jpg" class="img-fluid imgMembreCA" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4> Antoine Yapety </h4>
