Changement de CA hiver 2022 (#14)

--- a/index.html
+++ b/index.html
@@ -344,10 +344,10 @@
         <div class="row">
           <div class="col-md-2 offset-md-1 wow fadeInUp">
             <div class="member">
-              <img src="img/users/32.jpg" class="img-fluid" alt="">
+              <img src="img/users/30.jpg" class="img-fluid imgMembreCA" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4> Matthew Duteau</h4>
+                  <h4> Dominique Domenco</h4>
                   <span>Président</span>
                 </div>
               </div>
@@ -355,10 +355,10 @@
           </div>
           <div class="col-md-2 wow fadeInUp" data-wow-delay="0.1s">
             <div class="member">
-              <img src="img/users/1.jpg" class="img-fluid" alt="">
+              <img src="img/users/34.jpg" class="img-fluid imgMembreCA" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4> Matei Martin </h4>
+                  <h4> Matys Trudeau </h4>
                   <span>Vice Président</span>
                 </div>
               </div>
@@ -366,10 +366,10 @@
           </div>
           <div class="col-md-2 wow fadeInUp" data-wow-delay="0.2s">
             <div class="member">
-              <img src="img/users/33.jpg" class="img-fluid" alt="">
+              <img src="img/users/37.jpg" class="img-fluid imgMembreCA" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4> Félix Bourdages </h4>
+                  <h4> Alexandre Vigneault </h4>
                   <span>Secrétaire externe</span>
                 </div>
               </div>
@@ -377,10 +377,10 @@
           </div>
           <div class="col-md-2 wow fadeInUp" data-wow-delay="0.3s">
             <div class="member">
-              <img src="img/users/30.jpg" class="img-fluid" alt="">
+              <img src="img/users/36.jpg" class="img-fluid imgMembreCA" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4> Dominique Domenco </h4>
+                  <h4> Louis-Philippe Héon </h4>
                   <span>Secrétaire interne</span>
                 </div>
               </div>
@@ -388,10 +388,10 @@
           </div>
           <div class="col-md-2 wow fadeInUp" data-wow-delay="0.3s">
             <div class="member">
-              <img src="img/users/31.jpg" class="img-fluid" alt="">
+              <img src="img/users/35.jpg" class="img-fluid imgMembreCA" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4> Tomy Pinault </h4>
+                  <h4> Antoine Yapety </h4>
                   <span>Trésorier</span>
                 </div>
               </div>
