--- a/index.html
+++ b/index.html
@@ -344,10 +344,10 @@
         <div class="row">
           <div class="col-md-2 offset-md-1 wow fadeInUp">
             <div class="member">
-              <img src="img/users/30.jpg" class="img-fluid imgMembreCA" alt="">
+              <img src="img/users/37.jpg" class="img-fluid imgMembreCA" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4> Dominique Domenco</h4>
+                  <h4>Alexandre <br>Vigneault</h4>
                   <span>Président</span>
                 </div>
               </div>
@@ -358,19 +358,8 @@
               <img src="img/users/34.jpg" class="img-fluid imgMembreCA" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4> Matys Trudeau </h4>
+                  <h4>Matys <br>Trudeau</h4>
                   <span>Vice Président</span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-2 wow fadeInUp" data-wow-delay="0.2s">
-            <div class="member">
-              <img src="img/users/37.jpg" class="img-fluid imgMembreCA" alt="">
-              <div class="member-info">
-                <div class="member-info-content">
-                  <h4> Alexandre Vigneault </h4>
-                  <span>Secrétaire externe</span>
                 </div>
               </div>
             </div>
@@ -380,18 +369,29 @@
               <img src="img/users/36.jpg" class="img-fluid imgMembreCA" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4> Louis-Philippe Héon </h4>
+                  <h4>Louis-Philippe <br>Héon</h4>
                   <span>Secrétaire interne</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-2 wow fadeInUp" data-wow-delay="0.2s">
+            <div class="member">
+              <img src="img/users/39.jpg" class="img-fluid imgMembreCA" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Vincent <br>Clavette</h4>
+                  <span>Secrétaire externe</span>
                 </div>
               </div>
             </div>
           </div>
           <div class="col-md-2 wow fadeInUp" data-wow-delay="0.3s">
             <div class="member">
-              <img src="img/users/35.jpg" class="img-fluid imgMembreCA" alt="">
+              <img src="img/users/38.jpg" class="img-fluid imgMembreCA" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4> Antoine Yapety </h4>
+                  <h4>Guillaume <br>Filiatrault</h4>
                   <span>Trésorier</span>
                 </div>
               </div>
