progress member image viewer

--- a/index.html
+++ b/index.html
@@ -398,6 +398,12 @@
           </div>
         </div>
       </div>
+
+      <div id="memberImgViewer" hidden class="text-center p-3" style=" position: fixed; height:auto; width:500px; z-index: 999; top: 50%; left: 50%;  margin-top: -15%; margin-left: -15%; background-color: black; color:white;">
+        <h4 style="font-weight:bold;">Guillaume Filiatrault</h4>
+        <span>Trésorier</span>
+        <img class="img-fluid p-4" src="img/users/38.jpg" alt="">
+      </div>
     </section>
     <!-- #team -->
     <!--==========================
