--- a/index.html
+++ b/index.html
@@ -343,10 +343,10 @@
         <div class="row">
           <div class="col-md-2 offset-md-1 wow fadeInUp">
             <div class="member">
-              <img src="img/users/37.jpg" class="img-fluid imgMembreCA" alt="">
+              <img src="img/users/40.jpg" class="img-fluid imgMembreCA" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Alexandre <br>Vigneault</h4>
+                  <h4>Vincent <br>Clavette</h4>
                   <span>Président</span>
                 </div>
               </div>
@@ -354,10 +354,10 @@
           </div>
           <div class="col-md-2 wow fadeInUp" data-wow-delay="0.1s">
             <div class="member">
-              <img src="img/users/34.jpg" class="img-fluid imgMembreCA" alt="">
+              <img src="img/users/41.jpg" class="img-fluid imgMembreCA" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Matys <br>Trudeau</h4>
+                  <h4>Hedi <br>Melo Cherni</h4>
                   <span>Vice Président</span>
                 </div>
               </div>
@@ -365,10 +365,10 @@
           </div>
           <div class="col-md-2 wow fadeInUp" data-wow-delay="0.3s">
             <div class="member">
-              <img src="img/users/36.jpg" class="img-fluid imgMembreCA" alt="">
+              <img src="img/users/42.jpg" class="img-fluid imgMembreCA" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Louis-Philippe <br>Héon</h4>
+                  <h4>Julien <br>Lapointe</h4>
                   <span>Secrétaire interne</span>
                 </div>
               </div>
@@ -376,10 +376,10 @@
           </div>
           <div class="col-md-2 wow fadeInUp" data-wow-delay="0.2s">
             <div class="member">
-              <img src="img/users/39.jpg" class="img-fluid imgMembreCA" alt="">
+              <img src="img/users/43.jpg" class="img-fluid imgMembreCA" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Vincent <br>Clavette</h4>
+                  <h4>Antoine <br>Champagne</h4>
                   <span>Secrétaire externe</span>
                 </div>
               </div>
@@ -387,10 +387,10 @@
           </div>
           <div class="col-md-2 wow fadeInUp" data-wow-delay="0.3s">
             <div class="member">
-              <img src="img/users/38.jpg" class="img-fluid imgMembreCA" alt="">
+              <img src="img/users/44.jpg" class="img-fluid imgMembreCA" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Guillaume <br>Filiatrault</h4>
+                  <h4>Jérémie <br>Zaragoza</h4>
                   <span>Trésorier</span>
                 </div>
               </div>
