--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <li><a href="#services">Nos services</a></li>
           <li><a href="#team">Membres du conseil</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li><a href="http://adeptinfo.ca/lan">LAN de L'ADEPT</a></li>
+          <li><a href="https://www.eventbrite.ca/e/billets-lan-de-ladept-a23-724040122497">LAN de L'ADEPT</a></li>
         </ul>
       </nav>
     </div>
@@ -234,7 +234,7 @@
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <div class="icon"><i class="ion-ios-game-controller-b"></i></div>
-            <h4 class="title"><a href="http://adeptinfo.ca/lan">LAN</a></h4>
+            <h4 class="title"><a href="https://www.eventbrite.ca/e/billets-lan-de-ladept-a23-724040122497">LAN</a></h4>
             <p class="description">Nous organisons chaque session le LAN de l'ADEPT : un événement de jeux en réseau qui
               se déroule ici même au cégep et qui regroupe des adeptes de jeux vidéo de partout au Québec!</p>
           </div>
@@ -244,7 +244,7 @@
               <!-- <a href="./hoodies/index.php"> -->
               Hoodies officiels</a>
             </h4>
-            <p class="description">Une fois par session vous aurez la chance de vous procurer un hoodie officiel et
+            <p class="description">Une fois par année vous aurez la chance de vous procurer un hoodie officiel et
               génial réservé aux membres des deux techniques! En plus, il est super confortable!
               <!-- Plus de détails <a href='./hoodies'>ici</a>.</p> -->
           </div>
@@ -254,7 +254,7 @@
               <!-- <a href="./produits.php"> -->
               Frigo et collations</a>
             </h4>
-            <p class="description">Vous êtes pressé ou vous ne voulez pas faire la file à la cafeteria? Ça tombe bien
+            <p class="description">Vous êtes pressé ou vous ne voulez pas faire la file à la cafétéria? Ça tombe bien
               car nous avons justement un frigo plein pour vous dépanner! De
               <!-- <a href='./produits.php'> -->
               nombreux breuvages
@@ -289,7 +289,7 @@
             l'événement regroupe désormais près de 250 adeptes de jeux vidéo de partout au Québec chaque session!</p>
         </div>
 
-        <a class="cta-btn" href="http://adeptinfo.ca/lan">En savoir plus</a>
+        <a class="cta-btn" href="https://www.eventbrite.ca/e/billets-lan-de-ladept-a23-724040122497">En savoir plus</a>
       </div>
     </section>
     <!-- #call-to-action -->
@@ -307,15 +307,16 @@
         </header>
         <div class="row counters">
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">316</span>
+            <span data-toggle="counter-up">559</span>
             <p>Membres</p>
           </div>
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">33</span>
+            <span data-toggle="counter-up">39</span>
             <p>Ans d'activité</p>
+            <!--Depuis 1984-->
           </div>
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">15</span>
+            <span data-toggle="counter-up">16</span>
             <p>LAN organisés</p>
           </div>
           <div class="col-lg-3 col-6 text-center">
@@ -440,21 +441,6 @@
         </div>
         <div class="row contact-info">
           <div class="col-md-4 left">
-            <!--<i class="fab fa-discord large-icon discord-color"></i>-->
-            <iframe src="https://discordapp.com/widget?id=362987473154080778&theme=dark" width="100%" height="390" allowtransparency="true" frameborder="0"></iframe>
-            <!--================
-				Bouton d'inviation discord normal
-			  ====================
-			  <svg class="svg-inline--fa fa-discord  large-icon discord-color" aria-hidden="true" width="50" data-icon="discord" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                <path fill="currentColor" d="M297.216 243.2c0 15.616-11.52 28.416-26.112 28.416-14.336 0-26.112-12.8-26.112-28.416s11.52-28.416 26.112-28.416c14.592 0 26.112 12.8 26.112 28.416zm-119.552-28.416c-14.592 0-26.112 12.8-26.112 28.416s11.776 28.416 26.112 28.416c14.592 0 26.112-12.8 26.112-28.416.256-15.616-11.52-28.416-26.112-28.416zM448 52.736V512c-64.494-56.994-43.868-38.128-118.784-107.776l13.568 47.36H52.48C23.552 451.584 0 428.032 0 398.848V52.736C0 23.552 23.552 0 52.48 0h343.04C424.448 0 448 23.552 448 52.736zm-72.96 242.688c0-82.432-36.864-149.248-36.864-149.248-36.864-27.648-71.936-26.88-71.936-26.88l-3.584 4.096c43.52 13.312 63.744 32.512 63.744 32.512-60.811-33.329-132.244-33.335-191.232-7.424-9.472 4.352-15.104 7.424-15.104 7.424s21.248-20.224 67.328-33.536l-2.56-3.072s-35.072-.768-71.936 26.88c0 0-36.864 66.816-36.864 149.248 0 0 21.504 37.12 78.08 38.912 0 0 9.472-11.52 17.152-21.248-32.512-9.728-44.8-30.208-44.8-30.208 3.766 2.636 9.976 6.053 10.496 6.4 43.21 24.198 104.588 32.126 159.744 8.96 8.96-3.328 18.944-8.192 29.44-15.104 0 0-12.8 20.992-46.336 30.464 7.68 9.728 16.896 20.736 16.896 20.736 56.576-1.792 78.336-38.912 78.336-38.912z"></path>
-              </svg>
-                <h3>Discord</h3>-->
-            <p><a href="https://discordapp.com/invite/KYZ5JQB" class="btn btn-primary text-white discord">Rejoindre
-                notre serveur</a></p>
-          </div>
-
-
-          <div class="col-md-4 center">
             <!--<i class="fab fa-facebook-messenger large-icon messenger-color"></i>-->
             <svg class="svg-inline--fa fa-facebook-messenger fa-w-14 large-icon messenger-color" aria-hidden="true" data-prefix="fab" width="50" data-icon="facebook-messenger" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg="">
               <path fill="currentColor" d="M224 32C15.9 32-77.5 278 84.6 400.6V480l75.7-42c142.2 39.8 285.4-59.9 285.4-198.7C445.8 124.8 346.5 32 224 32zm23.4 278.1L190 250.5 79.6 311.6l121.1-128.5 57.4 59.6 110.4-61.1-121.1 128.5z">
@@ -465,6 +451,19 @@
                 message</a></p>
           </div>
 
+          <div class="col-md-4 center">
+            <!--<i class="fab fa-discord large-icon discord-color"></i>-->
+            <iframe src="https://discordapp.com/widget?id=362987473154080778&theme=dark" width="100%" height="390" allowtransparency="true" frameborder="0"></iframe>
+            <!--================
+            Bouton d'inviation discord normal
+            ====================
+            <svg class="svg-inline--fa fa-discord  large-icon discord-color" aria-hidden="true" width="50" data-icon="discord" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                    <path fill="currentColor" d="M297.216 243.2c0 15.616-11.52 28.416-26.112 28.416-14.336 0-26.112-12.8-26.112-28.416s11.52-28.416 26.112-28.416c14.592 0 26.112 12.8 26.112 28.416zm-119.552-28.416c-14.592 0-26.112 12.8-26.112 28.416s11.776 28.416 26.112 28.416c14.592 0 26.112-12.8 26.112-28.416.256-15.616-11.52-28.416-26.112-28.416zM448 52.736V512c-64.494-56.994-43.868-38.128-118.784-107.776l13.568 47.36H52.48C23.552 451.584 0 428.032 0 398.848V52.736C0 23.552 23.552 0 52.48 0h343.04C424.448 0 448 23.552 448 52.736zm-72.96 242.688c0-82.432-36.864-149.248-36.864-149.248-36.864-27.648-71.936-26.88-71.936-26.88l-3.584 4.096c43.52 13.312 63.744 32.512 63.744 32.512-60.811-33.329-132.244-33.335-191.232-7.424-9.472 4.352-15.104 7.424-15.104 7.424s21.248-20.224 67.328-33.536l-2.56-3.072s-35.072-.768-71.936 26.88c0 0-36.864 66.816-36.864 149.248 0 0 21.504 37.12 78.08 38.912 0 0 9.472-11.52 17.152-21.248-32.512-9.728-44.8-30.208-44.8-30.208 3.766 2.636 9.976 6.053 10.496 6.4 43.21 24.198 104.588 32.126 159.744 8.96 8.96-3.328 18.944-8.192 29.44-15.104 0 0-12.8 20.992-46.336 30.464 7.68 9.728 16.896 20.736 16.896 20.736 56.576-1.792 78.336-38.912 78.336-38.912z"></path>
+                  </svg>
+                    <h3>Discord</h3>-->
+            <p><a href="https://discordapp.com/invite/KYZ5JQB" class="btn btn-primary text-white discord">Rejoindre
+                notre serveur</a></p>
+          </div>
 
           <div class="col-md-4 right">
             <svg class="svg-inline--fa fa-discord large-icon green" aria-hidden="true" width="50" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
@@ -517,7 +516,7 @@
             <ul>
               <!-- <li><i class="ion-ios-arrow-right"></i> <a
                   href="./hoodies/index.php?lang=<?php echo $t->lang ?>">Réserver un hoodie</a></li> -->
-              <li><i class="ion-ios-arrow-right"></i> <a href="http://adeptinfo.ca/lan">Le LAN de L'ADEPT</a></li>
+              <li><i class="ion-ios-arrow-right"></i> <a href="https://www.eventbrite.ca/e/billets-lan-de-ladept-a23-724040122497">Le LAN de L'ADEPT</a></li>
               <li><i class="ion-ios-arrow-right"></i> <a href="#about" class="btn-get-started scrollto">À propos</a>
               </li>
               <li><i class="ion-ios-arrow-right"></i> <a href="#services" class="btn-get-started scrollto">Nos
@@ -554,7 +553,7 @@
     </div>
     <div class="container">
       <div class="copyright">
-        &copy; Copyright 2019 <strong class='green'>ADEPT Informatique</strong>. Tous droits réservés.
+        &copy; Copyright 2023 <strong class='green'>ADEPT Informatique</strong>. Tous droits réservés.
       </div>
       <div class="credits">
         Ce site web est <a href='https://github.com/adept-informatique/adeptinfo.ca'>open-source</a>. Merci à <a href='https://github.com/ADEPT-Informatique/adeptinfo.ca#remerciements'>tous ceux qui y ont collaboré</a> !
