FCT - changement CA A23
Downsize photos, changement nom/photos

--- a/index.html
+++ b/index.html
@@ -377,10 +377,10 @@
           </div>
           <div class="col-md-2 wow fadeInUp" data-wow-delay="0.2s">
             <div class="member">
-              <img src="img/users/43.jpg" class="img-fluid imgMembreCA" alt="">
+              <img src="img/users/37.jpg" class="img-fluid imgMembreCA" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Antoine <br>Champagne</h4>
+                  <h4>Alexandre <br>Vigneault</h4>
                   <span>Secrétaire externe</span>
                 </div>
               </div>
@@ -388,10 +388,10 @@
           </div>
           <div class="col-md-2 wow fadeInUp" data-wow-delay="0.3s">
             <div class="member">
-              <img src="img/users/44.jpg" class="img-fluid imgMembreCA" alt="">
+              <img src="img/users/30.jpg" class="img-fluid imgMembreCA" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Jérémie <br>Zaragoza</h4>
+                  <h4>Dominique <br>Domenco</h4>
                   <span>Trésorier</span>
                 </div>
               </div>
